z-index fix

--- a/photo-gallery/src/Components/navbar.css
+++ b/photo-gallery/src/Components/navbar.css
@@ -4,6 +4,7 @@
   left: 40px;
   display: flex;
   font-family: Rajdhani;
+  z-index: 10;
 }
 
 div .logo{
